[project]
name = "passportimagecreater"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <4"
dependencies = [
    "mediapipe>=0.10.21",
    "numpy",
    "onnxruntime==1.18.1",
    "opencv-python-headless>=4.11.0.86",
    "pillow",
    "streamlit>=1.49.1",
]
